--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>GSHC</title>
+	<title>GSHouseCleaning</title>
 </head>
 <body>
 	<h1>Welcome!</h1>
