Fixed logo to fit background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"> <img id="logo" alt="Brand" src="images/logo-inverse1.jpg"></a>
+      <a class="navbar-brand" href="#"> <img id="logo" alt="Brand" src="images/logo-inverse1.png"></a>
 
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
