--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <section class="page-header">
-      <h1 class="project-name">Galo & Sandra House Cleaning</h1>
-      <h2 class="project-tagline">We make life easier</h2>
-    </section>
+    <div class="">
+    	<img src="images/main-pic.png">
+    </div>
 
     <div class="main-content">
     	<div class="col-md-12">
