fixed main pic to fit mobile display

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <div class="">
-    	<img src="images/main-pic.png">
+    <div class="col-xs-12">
+    	<img id="mainPhoto" src="images/main-pic.png">
     </div>
 
     <div class="main-content">
