--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <div class="col-xs-12">
+    <div class="">
     	<img id="mainPhoto" src="images/main-pic.png">
     </div>
 
