changed image for main pic

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div><!-- /.container-fluid -->
 </nav>
     <div class="">
-    	<img id="mainPhoto" src="images/main-pic.png">
+    	<img id="mainPhoto" src="images/main-pic1.png">
     </div>
 
     <div class="main-content">
