Added tags for SEO
added meta tags and description for SEO as well as favicon

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="G & S House Cleaning is a local phoenix residential cleaning bussiness that is affordable and 100% gurenteed."
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
+    <link rel="icon" type="image/png" href="images/logo-inverse1.jpg">
   </head>
   <body>
   <nav class="navbar navbar-inverse">
@@ -35,6 +36,7 @@
         <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#contactUs" aria-controls="contactUs" role="tab" data-toggle="tab">Contact Us</a></li>
+        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#coupons" aria-controls="coupons" role="tab" data-toggle="tab">Coupons</a></li>
         <li data-toggle="collapse" data-target=".navbar-collapse"><a class="btn btn-primary" href="#book" aria-controls="book" role="tab" data-toggle="tab">Book a Cleaning</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -199,6 +201,13 @@
 			    </div>
 		    </div>
 		    <!--End of 'contact us'-->
+
+		    <!--Start of 'coupons' tab-->
+		    <div role="tabpanel" class="tab-pane" id="coupons">
+		    	Coupons
+		    </div>
+		    <!--End of 'coupons'-->
+
 		    <!--Start of 'Book' tab-->
 		    <div role="tabpanel" class="tab-pane" id="book">
 		    	Booking
