fixed an error from the last commit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="G & S House Cleaning is a local phoenix residential cleaning bussiness that is affordable and 100% gurenteed."
+    <meta name="description" content="G & S House Cleaning is a local phoenix residential cleaning bussiness that is affordable and 100% gurenteed.">
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/index.css">
