--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" id="btn" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -31,13 +31,13 @@
       	
       </ul>
       <ul class="nav navbar-nav navbar-right nav-pills nav-stacked" role="tablist">
-      	<li data-toggle="collapse" data-target=".navbar-collapse" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#aboutUs" aria-controls="aboutUs" role="tab" data-toggle="tab">About Us</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#contactUs" aria-controls="contactUs" role="tab" data-toggle="tab">Contact Us</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a href="#coupons" aria-controls="coupons" role="tab" data-toggle="tab">Coupons</a></li>
-        <li data-toggle="collapse" data-target=".navbar-collapse"><a class="btn btn-primary" href="#book" aria-controls="book" role="tab" data-toggle="tab">Book a Cleaning</a></li>
+      	<li  class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+        <li class="listItems"><a href="#aboutUs" aria-controls="aboutUs" role="tab" data-toggle="tab">About Us</a></li>
+        <li class="listItems"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works</a></li>
+        <li class="listItems"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing</a></li>
+        <li class="listItems"><a href="#contactUs" aria-controls="contactUs" role="tab" data-toggle="tab">Contact Us</a></li>
+        <li class="listItems"><a href="#coupons" aria-controls="coupons" role="tab" data-toggle="tab">Coupons</a></li>
+        <li class="listItems"><a class="btn btn-primary" href="#book" aria-controls="book" role="tab" data-toggle="tab">Book a Cleaning</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
