fixed last commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		      	
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right nav-pills nav-stacked" role="tablist">
-		      	<li class="active list items"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+		      	<li class="active listItems"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
 		        <li class="listItems"><a href="#aboutUs" aria-controls="aboutUs" role="tab" data-toggle="tab">About Us</a></li>
 		        <li class="listItems"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works</a></li>
 		        <li class="listItems"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing</a></li>
