fixed some formatting issues

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 	</nav>
 	<div class="tab-content">
 		    <div role="tabpanel" class="tab-pane active" id="home">
-		    	<div id="mainPhotoContainer" class="col-md-12">
+		    	<div class="photoContainer" class="col-md-12">
 			    	<img id="mainPhoto" src="images/main-pic1.png">
 			    </div>
-			    <div class="row">
+			    <div class="container">
 				  <div class="col-sm-6 col-md-4">
 				  	<br>
 				    <div class="thumbnail">
@@ -87,7 +87,7 @@
 		    <!--Start of 'About Us' Tab-->
 		    <div role="tabpanel" class="tab-pane" id="aboutUs">
 		    	<br>
-		    	<div class="row">
+		    	<div class="container">
 				   	<div class="col-md-8 well well-md">
 				   		<h2 class="center">About Us</h2>
 				   		<p>
@@ -96,7 +96,7 @@
 				   		to expand and hopefully bring our service to your family. 
 				   		</p>
 				   	</div>
-				   	<div class="col-md-4">
+				   	<div class="col-md-4 photoContainer">
 				   		<img id="familyPhoto" alt="Contact Us" src="images/defaultPhoto.jpg">
 				   	</div>
 	  		 	</div>
@@ -117,8 +117,8 @@
 
 		     <!--Start of 'contact us' tab-->
 		    <div role="tabpanel" class="tab-pane" id="contactUs">
-		    	<div class="row">
-		    		<div class="col-md-12">
+		    	<div class="container">
+		    		<div class="col-md-12 photoContainer">
 		    			<img id="contactUsPhoto" src="images/contact-us1.jpg">
 		    		</div>
 		    	</div>
