--- a/index.html
+++ b/index.html
@@ -48,39 +48,26 @@
 			    	<img id="mainPhoto" src="images/main-pic1.png">
 			    </div>
 			    <div class="container">
-				  <div class="col-sm-6 col-md-4">
+			    	<h3 class="center">Residential Cleaning Service</h3>
+				  <div class="col-xs-6 col-sm-6 col-md-6">
 				  	<br>
 				    <div class="thumbnail">
 				      <img src="images/homeDefaultPhoto.png" alt="...">
 				      <div class="caption">
-				        <h3 class="center">Residential</h3>
-				        <p>Insert caption about residential cleanings</p>
+				        <h5 class="center">One time Service</h5>
 				      </div>
 				    </div>
 				  </div>
-				  <div class="col-sm-6 col-md-4">
+				  <div class="col-xs-6 col-sm-6 col-md-6">
 				  <br>
 				    <div class="thumbnail">
 				      <img src="images/homeDefaultPhoto.png" alt="...">
 				      <div class="caption">
-				        <h3>Thumbnail label</h3>
-				        <p>...</p>
+				        <h5>Recurring Service</h5>
 				      </div>
 				    </div>
 				  </div>
-				  <div class="col-sm-6 col-md-4">
-				  <br>
-				    <div class="thumbnail">
-				      <img src="images/homeDefaultPhoto.png" alt="...">
-				      <div class="caption">
-				        <h3>Thumbnail label</h3>
-				        <p>...</p>
-				        
-				      </div>
-				    </div>
-				  </div>
-
-				</div>
+		    </div>
 		    </div>
 		    <!-- END of 'HOME' TAB -->
 
@@ -105,7 +92,25 @@
 
 		    <!--Start of 'How it works' tab-->
 		    <div role="tabpanel" class="tab-pane" id="howItWorks">
-		    	How it works
+		    	<div class="container">
+		    		<div class="col-md-12 well well-md">
+		    			<h2 class="center">Step 1</h2>
+		    			<p>Fill out the form or give us a call at (xxx) xxx-xxxx and let us know what type of service you would like</p>
+		    		</div>
+		    		<br>
+		    		<div class="col-md-12 well well-md">
+		    			<h2 class="center">Step 2</h2>
+		    			<p>We will send one of our Service specialist to evaluate the house</p>
+		    		</div>
+		    		<br>
+		    		<div class="col-md-12 well well-md">
+		    			<h2 class="center">Step 3</h2>
+		    		</div>
+		    		<br>
+		    		<div class="col-md-12 well well-md">
+		    			<h2 class="center">Step 4</h2>
+		    		</div>
+		   		</div>
 		    </div>
 		    <!-- END of 'How it works' tab -->
 
@@ -216,13 +221,21 @@
 		    	Booking
 		    </div>
 		    <!--End of 'Booking'-->
-		  </div>
-      <footer class="site-footer">
-      		<div></div>
+		</div>
+      <footer class="">
+       		<div class="col-xs-12 col-sm-12 col-md-12 well well-md" style="margin-bottom:0px; padding-bottom;0px">
+       			<div class="row">
+       				<h4 class="center">Connect With Us!</h4>
+       			</div>
+       			<div class="row">
+	           		<div class="center">
+		           		<a href="http://www.facebook.com/GandSHC"><img src="images/fb-circle-45.png" style="padding-right:15px;"></a>
+		           		<a href="#"><img src="images/insta-circle-45.png" style="padding-right:15px;"></a>
+		           		<a href="#"><img src="images/twit-circle.png"></a>
+		           	</div>
+		        </div>
+ 			</div>
       </footer>
-
-    </div>
-
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
