--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="images/logo-inverse1.jpg">
+    <link rel="stylesheet" href="css/hover-min.css">
   </head>
   <body>
   	<nav class="navbar navbar-inverse">
@@ -31,17 +32,19 @@
 		      	
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right nav-pills nav-stacked" role="tablist">
-		      	<li class="active listItems"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-		        <li class="listItems"><a href="#aboutUs" aria-controls="aboutUs" role="tab" data-toggle="tab">About Us</a></li>
-		        <li class="listItems"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works</a></li>
-		        <li class="listItems"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing</a></li>
-		        <li class="listItems"><a href="#contactUs" aria-controls="contactUs" role="tab" data-toggle="tab">Contact Us</a></li>
-		        <li class="listItems"><a href="#coupons" aria-controls="coupons" role="tab" data-toggle="tab">Coupons</a></li>
-		        <li class="listItems"><a class="btn btn-primary" href="#book" aria-controls="book" role="tab" data-toggle="tab">Book a Cleaning</a></li>
+		      	<li class="active listItems hvr-underline-reveal"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home <span class="glyphicon glyphicon-home"></span></a></li>
+		        <li class="listItems hvr-underline-reveal"><a href="#aboutUs" aria-controls="aboutUs" role="tab" data-toggle="tab">About Us <span class="glyphicon glyphicon-info-sign"></span></a></li>
+		        <li class="listItems hvr-underline-reveal"><a href="#howItWorks" aria-controls="howItWorks" role="tab" data-toggle="tab">How It Works <span class="glyphicon glyphicon-question-sign"></span></a></li>
+		        <li class="listItems hvr-underline-reveal"><a href="#pricing" aria-controls="pricing" role="tab" data-toggle="tab">Pricing <span class="glyphicon glyphicon-usd"></span></a></li>
+		        <li class="listItems hvr-underline-reveal"><a href="#contactUs" aria-controls="contactUs" role="tab" data-toggle="tab">Contact Us <span class="glyphicon glyphicon-earphone
+"></span></a></li>
+		        <li class="listItems hvr-underline-reveal"><a href="#coupons" aria-controls="coupons" role="tab" data-toggle="tab">Coupons <span class="glyphicon glyphicon-barcode"></span></a></li>
+		        <li class="listItems hvr-"><a class="btn btn-primary" href="#book" aria-controls="book" role="tab" data-toggle="tab">Book a Cleaning <span class="glyphicon glyphicon-credit-card"></span></a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 	  	</div><!-- /.container-fluid -->
 	</nav>
+	<div id="main">
 	<div class="tab-content">
 		    <div role="tabpanel" class="tab-pane active" id="home">
 		    	<div class="photoContainer" class="col-md-12">
@@ -49,7 +52,7 @@
 			    </div>
 			    <div class="container">
 			    	<h3 class="center">Residential Cleaning Service</h3>
-				  <div class="col-xs-6 col-sm-6 col-md-6">
+				  <div class="col-xs-6 col-sm-6 col-md-6 hvr-float">
 				  	<br>
 				    <div class="thumbnail">
 				      <img src="images/homeDefaultPhoto.png" alt="...">
@@ -58,7 +61,7 @@
 				      </div>
 				    </div>
 				  </div>
-				  <div class="col-xs-6 col-sm-6 col-md-6">
+				  <div class="col-xs-6 col-sm-6 col-md-6 hvr-float">
 				  <br>
 				    <div class="thumbnail">
 				      <img src="images/homeDefaultPhoto.png" alt="...">
@@ -222,6 +225,7 @@
 		    </div>
 		    <!--End of 'Booking'-->
 		</div>
+	  </div>
       <footer class="">
        		<div class="col-xs-12 col-sm-12 col-md-12 well well-md" style="margin-bottom:0px; padding-bottom;0px">
        			<div class="row">
@@ -229,9 +233,9 @@
        			</div>
        			<div class="row">
 	           		<div class="center">
-		           		<a href="http://www.facebook.com/GandSHC"><img src="images/fb-circle-45.png" style="padding-right:15px;"></a>
-		           		<a href="#"><img src="images/insta-circle-45.png" style="padding-right:15px;"></a>
-		           		<a href="#"><img src="images/twit-circle.png"></a>
+		           		<a href="http://www.facebook.com/GandSHC" class="hvr-grow"><img src="images/fb-circle-45.png" style="padding-right:15px;"></a>
+		           		<a href="https://www.instagram.com/G_and_S_House_Cleaning/?hl=en" class="hvr-grow"><img src="images/insta-circle-45.png" style="padding-right:15px;"></a>
+		           		<a href="https://twitter.com/GSHouseCleaning" class="hvr-grow"><img src="images/twit-circle.png"></a>
 		           	</div>
 		        </div>
  			</div>
