--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
 	<div id="main">
 	<div class="tab-content">
 		    <div role="tabpanel" class="tab-pane fade in active" id="home">
-		    	<div class="photoContainer" class="col-md-12">
+		    	<div class="photoContainer hidden-xs hidden-sm">
 			    	<img id="mainPhoto" src="images/main-pic1.png">
+			    </div>
+			    <div class="hidden-md hidden-lg">
+			    	<img id="mainPhotoXs" src="images/main-pic-3.png">
 			    </div>
 			    <div class="container">
 			    	<h3 class="center">Residential Cleaning Service</h3>
@@ -258,7 +261,166 @@
 
 		    <!--Start of 'coupons' tab-->
 		    <div role="tabpanel" class="tab-pane fade" id="faqs">
-		    	Faqs
+		    <div class="container">
+		    	<div>
+		    		<img id="faqPhoto" src="images/faq-pic-2.jpg"/>
+		    	</div>
+		    	<div class="row">
+		    	<div class="row center">
+		    		<h3>Frequently Asked Questions</h3>
+		    	</div>
+		    		<div class="col-xs-12 col-md-6">
+		    			<h4>Booking</h4>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How does booking work?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How can I know which days are available to get my house cleaned?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    		</div>
+		    		<div class="col-xs-12 col-md-6">
+		    			<h4>Pricing</h4>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12 faq-divs">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					How do you calculate the price of the service?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12 faq-divs">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					Do you have a cancelation policy?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12 faq-divs">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					What method of payment do you accept?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12 faq-divs">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How do I use a coupon or a referral discount?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+			    		</div>
+		    		</div>
+		    	</div>
+		    	<div class="row">
+		    		<div class="col-xs-12 col-md-6">
+		    			<h4>The day of cleaning</h4>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12 faq-divs">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How many cleaners should arrive for my appointment?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12 faq-divs">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How long will my cleaning appointment take?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+				    			<div class="well well-sm col-md-12 faq-divs">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					Do I need to be home during the cleaning?
+				    				</h4>
+				    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					What will the cleaners not clean in a standard service?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    		</div>
+		    		<div class="col-xs-12 col-md-6">
+		    			<h4>Additional Services</h4>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					What are considered additional services?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+		    			</div>
+		    			<div class="faq-divs col-md-12">
+			    			<a class="faq-links" href="#/">
+			    			<div class="well well-sm col-md-12">
+			    				<h4>
+			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+			    					How can I know which days are available to get my house cleaned?
+			    				</h4>
+			    			</div>
+			    			</a>
+			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
+			    		</div>
+		    		</div>
+		    	</div>
+		    	<!--Still have questions section-->
+		    	<div class="row">
+		    		
+		    	</div>
+		    	</div>
 		    </div>
 		    <!--End of 'coupons'-->
 
@@ -301,7 +463,7 @@
        							<hr>
        						</div>
        						<ul>
-       							<li><a href="">FAQ</a></li>
+       							<li><a href="#">FAQ</a></li>
        							<li><a href="">Contact Us</a></li>
        						</ul>
        					</div>
