fixed last commit

--- a/index.html
+++ b/index.html
@@ -298,18 +298,18 @@
 		    			<h4>Pricing</h4>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-			    			<div class="well well-sm col-md-12 faq-divs">
-			    				<h4>
-			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
-			    					How do you calculate the price of the service?
-			    				</h4>
-			    			</div>
+				    			<div class="well well-sm col-md-12">
+				    				<h4>
+				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
+				    					How do you calculate the price of the service?
+				    				</h4>
+				    			</div>
 			    			</a>
 			    			<div class="toggle-box col-md-12"><p>It works when we put something in here</p></div>
 		    			</div>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-			    			<div class="well well-sm col-md-12 faq-divs">
+			    			<div class="well well-sm col-md-12">
 			    				<h4>
 			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 			    					Do you have a cancelation policy?
@@ -320,7 +320,7 @@
 		    			</div>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-			    			<div class="well well-sm col-md-12 faq-divs">
+			    			<div class="well well-sm col-md-12">
 			    				<h4>
 			    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 			    					What method of payment do you accept?
@@ -331,7 +331,7 @@
 		    			</div>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-				    			<div class="well well-sm col-md-12 faq-divs">
+				    			<div class="well well-sm col-md-12">
 				    				<h4>
 				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 				    					How do I use a coupon or a referral discount?
@@ -358,7 +358,7 @@
 		    			</div>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-				    			<div class="well well-sm col-md-12 faq-divs">
+				    			<div class="well well-sm col-md-12">
 				    				<h4>
 				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 				    					How long will my cleaning appointment take?
@@ -369,7 +369,7 @@
 		    			</div>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-				    			<div class="well well-sm col-md-12 faq-divs">
+				    			<div class="well well-sm col-md-12">
 				    				<h4>
 				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 				    					Do I need to be home during the cleaning?
