fixed last commit

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		    			<h4>The day of cleaning</h4>
 		    			<div class="faq-divs col-md-12">
 			    			<a class="faq-links" href="#/">
-				    			<div class="well well-sm col-md-12 faq-divs">
+				    			<div class="well well-sm col-md-12">
 				    				<h4>
 				    					<span class="faq-glyphicon glyphicon glyphicon-plus-sign"></span>
 				    					How many cleaners should arrive for my appointment?
