fixed some ui on pricing

--- a/index.html
+++ b/index.html
@@ -194,11 +194,13 @@
 	    							<option>6 bedrooms</option>
 	    						</select>
 	    					</div>
-
+	    					<div class="hidden-md hidden-lg col-xs-12">
+		    					<br>
+		    				</div>
 	    					<div class="col-xs-12 col-md-4">
 	    						<select class="form-control home-details" id="bathroom-select">
 	    							<option value="0">How many bathrooms?</option>
-	    							<option value="1">1 bedroom</option>
+	    							<option value="1">1 bathroom</option>
 	    							<option value="2">2 bathrooms</option>
 	    							<option value="3">3 bathrooms</option>
 	    							<option value="4">4 bathrooms</option>
@@ -206,6 +208,9 @@
 	    							<option value="6">6 bathrooms</option>
 	    						</select>
 	    					</div>
+	    					<div class="hidden-md hidden-lg col-xs-12">
+		    					<br>
+		    				</div>
 		    				<div class="col-xs-12 col-md-4">
 	    						<select class="form-control home-details" id="size-select">
 	    							<option>How big is your house?</option>
@@ -223,20 +228,34 @@
 		    			</div>
 		    			<div class="row">
 		    				<div class="col-xs-6 col-md-3">
-		    					<a href="#/" class="btn btn-default form-control occurence" >One Time</a>
+		    					<a href="#/" class="btn btn-default form-control occurence" >
+		    						<span class="occurence-text">One Time</span>
+		    					</a>
 		    				</div>
 		    				<div class="col-xs-6 col-md-3">
-		    					<a href="#/" class="btn btn-default form-control occurence" >Weekly</a>
+		    					<a href="#/" class="btn btn-default form-control occurence" >
+		    						<span class="occurence-text">Weekly</span>
+		    					</a>
+		    				</div>
+		    				<div class="hidden-md hidden-lg col-xs-6">
+		    					<br>
+		    				</div>
+		    				<div class="hidden-md hidden-lg col-xs-6">
+		    					<br>
 		    				</div>
 		    				<div class="col-xs-6 col-md-3">
-		    					<a href="#/" class="btn btn-default form-control occurence" >Bi-weekly</a>
+		    					<a href="#/" class="btn btn-default form-control occurence" >
+		    						<span class="occurence-text">Bi-weekly</span>
+		    					</a>
 		    				</div>
+		    				
 		    				<div class="col-xs-6 col-md-3">
-		    					<a href="#/" class="btn btn-default form-control occurence" >Monthly</a>
+		    					<a href="#/" class="btn btn-default form-control occurence" >
+		    						<span class="occurence-text">Monthly</span>
+		    					</a>
 		    				</div>
 		    			</div>
 		    			<hr>
-		    			
 		    			<div class="row">
 		    				<h4>Additional Services</h4>
 		    			</div>
@@ -258,6 +277,9 @@
 		    						<br>
 		    						<span>Inside Fridge</span>
 		    					</a>
+		    				</div>
+		    				<div class="hidden-md hidden-lg col-xs-12">
+		    					<br>
 		    				</div>
 		    				<div class="col-xs-6 col-md-3">
 		    					<a href="#/" class="btn btn-default form-control add-div">
@@ -296,7 +318,11 @@
 		    						</div>
 		    						<br>
 		    						<span>Inside Cabinets</span>
-		    					</a>		    				</div>
+		    					</a>		    				
+		    				</div>
+		    				<div class="hidden-md hidden-lg col-xs-12">
+		    					<br>
+		    				</div>
 		    				<div class="col-xs-6 col-md-3">
 		    					<a href="#/" class="btn btn-default form-control add-div">
 		    						<div class="row">
