--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="G & S House Cleaning is a local phoenix residential cleaning bussiness that is affordable and 100% gurenteed.">
+    <meta name="description" content="G&S House Cleaning is a local phoenix residential cleaning bussiness that is affordable and 100% gurenteed.">
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="icon" type="image/png" href="images/logo-inverse1.png">
+    <link rel="icon" type="image/png" href="images/gs_logo2.1.png">
     <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
   </head>
@@ -24,7 +24,8 @@
 		      </button>
 		     
 
-		      <a class="navbar-brand" href="#"><img id="logo" alt="Brand" src="images/logo2.png"></a>
+		      <a class="navbar-brand" href="#"><img id="logo" alt="Brand" src="images/gs_logo2.png" style="width:45px"></a>
+		      <div id="businessName" >G&S House Cleaning</div>
 		      
 		    </div>
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -145,10 +146,10 @@
 					   		</div>
 				   		</div>
 					  <div class="row">
-					    <div class="col-sm-4 col-md-4 photoContainer">
+					    <div class="col-xs-12 col-sm-4 col-md-4 photoContainer">
 					   		<img id="familyPhoto" alt="Contact Us" src="images/defaultPhoto.jpg">
 					   	</div>
-						<div class="col-sm-8 col-md-8 well well-md">
+						<div class="col-xs-12 col-sm-8 col-md-8 well well-md">
 					   		<h2 class="center">About Us</h2>
 					   		<p>
 					   		This is a family owned company that is trying to deliver the best cleaning services to Phoenix.
@@ -552,7 +553,7 @@
        						</div>
        						<ul>
        							<li><a href="">Our Services</a></li>
-       							<li><a href="">How it Works</a></li>
+       							<li id="howItWorks"><a href="#/" >How it Works</a></li>
        							<li><a href="#" data-toggle="modal" data-target="#couponsModal">Coupons</a></li>
        						</ul>
        					</div>
