made some minor bug fixes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			    		<div class="stepNumber"><p>1</p></div>
 			    		<div class="stepDetails">
 			    			<h2 class="center">Talk to our representatives!</h2>
-			    			<p>Call (602) 332-3259 to talk to one of our representatives to schedule an appointment to evaluate your home. Feel free to get a free estimate using our tool on our website.</p>
+			    			<p class="stepSubDetails">Call (602) 332-3259 to talk to one of our representatives to schedule an appointment to evaluate your home. Feel free to get a free estimate using our tool on our website.</p>
 			    		</div>
 			    	</div>
 			    	<div class="stepContainer">
@@ -201,7 +201,7 @@
 			    		<div class="stepNumber"><p>2</p></div>
 			    		<div class="stepDetails">
 			    			<h2 class="center">Evaluation</h2>
-			    			<p>One of our trianed experts will arrive on the date of the appointment to evaluate your home and give you further details. There is no obligation, we want you to be completely comfortable with your decision of whether you would like to use our services</p>
+			    			<p class="stepSubDetails">One of our trianed experts will arrive on the date of the appointment to evaluate your home and give you further details. There is no obligation, we want you to be completely comfortable with your decision of whether you would like to use our services</p>
 			    		</div>
 			    	</div>
 			    	<div class="stepContainer">
@@ -209,7 +209,7 @@
 			    		<div class="stepNumber"><p>3</p></div>
 			    		<div class="stepDetails">
 			    			<h2 class="center">Confirm your appointment!</h2>
-			    			<p>After your home is evaluated, you can decide to start services immedietely and we will have a crew out to you within a week (based on availability). If you want to still shop around that is perfectly fine too. We would like to encourage you to find the best fit for you and your family. We do have a competitive charge rate, so if you have a quote from one of our competitors we will beat it by 10%.</p>
+			    			<p class="stepSubDetails">After your home is evaluated, you can decide to start services immedietely and we will have a crew out to you within a week (based on availability). If you want to still shop around that is perfectly fine too. We would like to encourage you to find the best fit for you and your family. We do have a competitive charge rate, so if you have a quote from one of our competitors we will beat it by 10%.</p>
 			    		</div>
 			    	</div>
 		   		</div>
@@ -403,7 +403,7 @@
 			    			<button class="btn btn-primary" id="contactSendBtn">Send</button>
 			    		</div>
 			    	</div> -->
-			    	<div class="col-md-8" id="contactInfoContainer">
+			    	<div class="col-xs-12 col-sm-12 col-md-8" id="contactInfoContainer">
 			    		<div class="row">
 			    			<div class="col-xs-2 col-sm-2 col-md-2">
 			    				<br>
