Made changes because there was overlap

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
        							<hr>
        						</div>
        						<ul>
-       							<li id="services"><a href="#/">Our Services</a></li>
+       							<li class="services"><a href="#/">Our Services</a></li>
        							<li id="howItWorksLink"><a href="#howItWorks" >How it Works</a></li>
        							<li><a href="#" data-toggle="modal" data-target="#couponsModal">Coupons</a></li>
        						</ul>
@@ -558,7 +558,7 @@
 		      	<p>We are actively seeking new people to join our team to continue to provide excellent services to our customers. We offer competitive pay and bonuses!</p>
 		      	<p>Basic qualifications required:</p>
 		      	<ul>
-		      		<li>Have relevant exprience that pertains to house cleaning</li>
+		      		<li>Have relevant exprience to house cleaning</li>
 		      		<li>Must be elligible to work in Arizona</li>
 		      		<li>Three references that we can contact</li>
 		      		<li>Must be available Monday through Friday</li>
@@ -622,7 +622,6 @@
 		    						<li>Dust window sills,ledges, wall hangings</li>
 		    						<li>Vacuum stairs if applicable</li>
 		    						<li>Vacuum under beds</li>
-		    						<li></li>
 		    					</ul>
 		    				</div>
 		    				<div class="col-xs-6 col-sm-3 col-md-6 servicesDiv">
