--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			    		<div class="stepNumber"><p>2</p></div>
 			    		<div class="stepDetails">
 			    			<h2 class="center">Evaluation</h2>
-			    			<p class="stepSubDetails">One of our trianed experts will arrive on the date of the appointment to evaluate your home and give you further details. There is no obligation, we want you to be completely comfortable with your decision of whether you would like to use our services</p>
+			    			<p class="stepSubDetails">One of our trianed experts will arrive on the date of the appointment to evaluate your home and give you further details. There is no obligation, we want you to be completely comfortable with your decision of whether you would like to use our services.</p>
 			    		</div>
 			    	</div>
 			    	<div class="stepContainer">
@@ -228,7 +228,7 @@
 		    				<h4 class="center">About your home</h4>
 		    			</div>
 		    			<div class="row">
-	    					<div class="col-xs-12 col-md-4">
+	    					<div class="col-xs-12 col-sm-5 col-md-4">
 	    						<select class="form-control home-details" id="bedroom-select">
 	    							<option>How many bedrooms?</option>
 	    							<option>1 bedroom</option>
@@ -239,18 +239,16 @@
 	    							<option>6 bedrooms</option>
 	    						</select>
 	    					</div>
-	    					<div class="hidden-md hidden-lg col-xs-12">
-		    					<br>
-		    				</div>
-	    					<div class="col-xs-12 col-md-4">
+	    					
+	    					<div class="col-xs-12 col-sm-5 col-md-4">
 	    						<select class="form-control home-details" id="bathroom-select">
-	    							<option value="0">How many bathrooms?</option>
-	    							<option value="1">1 bathroom</option>
-	    							<option value="2">2 bathrooms</option>
-	    							<option value="3">3 bathrooms</option>
-	    							<option value="4">4 bathrooms</option>
-	    							<option value="5">5 bathrooms</option>
-	    							<option value="6">6 bathrooms</option>
+	    							<option>How many bathrooms?</option>
+	    							<option>1 bathroom</option>
+	    							<option>2 bathrooms</option>
+	    							<option>3 bathrooms</option>
+	    							<option>4 bathrooms</option>
+	    							<option>5 bathrooms</option>
+	    							<option>6 bathrooms</option>
 	    						</select>
 	    					</div>
 	    					<div class="hidden-md hidden-lg col-xs-12">
@@ -328,6 +326,7 @@
 		    				</div>
 		    			</div>
 		    			<hr>
+		    			<p id="estimateDisclaimer">*Prices that are calculated through the estimator is not the actual cost. Actual cost comes after setting appointment and getting your home evaluated. Also weekly, bi-weekly, and monthly cost estimate does not reflect the initial cost of starting your service. If choosing a recurrance service, the first service is double what the estimator will show. Then your recurring payment for the cleaning service will be what is shown in the estimator. The estimates are close to what the actual price will be. Call now for more information (602) 332-3259.
 		    		</div>
 		    		<div class="col-xs-12 col-md-3">
 		    			<div class="col-md-12" id="summaryContainer">
@@ -340,7 +339,8 @@
 			    				<hr>
 			    				<h4>Estimated Cost:</h4>
 			    				<h3 id="estimate-cost"></h3>
-			    				<div>$<span id="service-total">0.00</span></div>
+			    				<div id="costText">$<span id="service-total">0.00</span></div>
+			    				<div class="row"><button class="btn btn-primary form-control" id="costReset">Reset Estimate</button></div>
 			    			</div>
 		    			</div>
 		    			<div class="col-md-12" id="guranteeContainer">
@@ -409,7 +409,7 @@
 			    			</div>
 			    			<div class="col-xs-8 col-sm-8 col-md-8">
 			    				<h3>Email Us</h3>
-			    				<p>Complete the online form to the left or directly email us at contact@gshousecleaning.com</p>
+			    				<p>Directly email us at contact@gshousecleaning.com</p>
 			    			</div>
 			    		</div>
 			    		<div class="row">
