fixed some more small bugs

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					   			</div>
 					   			<div>
 					   				<h3>TOP CLEANING PROVIDERS</h3>
-					   				<p>We only work with the best house cleaning providers in Phoenix. Cleaners are background checked must maintain a high customer satisfaction rating.</p>
+					   				<p class="homeSubText">We have been providing excellent customer service for over 20 years. We run a screening on all of our cleaners and they must maintain a high customer satisfaction rating.</p>
 					   			</div>
 					   			<br>
 					   		</div>
@@ -92,7 +92,7 @@
 					   			</div>
 					   			<div>
 					   				<h3>Simple Pricing</h3>
-					   				<p>No pricing games. We offer upfront pricing! Visit our online booking form to view different service and pricing options.</p>
+					   				<p class="homeSubText">No pricing games. We offer upfront pricing! Check out the different <a href="#/" class="services">services</a> that we provide and even get a free estimate by using our <a href="#/" class="pricingTool">pricing tool</a>.</p>
 					   			</div>
 					   			<br>
 					   		</div>
@@ -102,7 +102,7 @@
 					   			</div>
 					   			<div>
 					   				<h3>Satisfaction Guarantee</h3>
-					   				<p>We work hard to find the right house cleaners that offer great cleaning and we back each cleaning up with our 200% happiness guarantee.</p>
+					   				<p class="homeSubText">We work hard to find the right house cleaners that offer great cleaning and we back each cleaning up with our <span class="bold">100% happiness guarantee.</span></p>
 					   			</div>
 					   			<br>
 					   		</div>
