made some html changes

--- a/index.html
+++ b/index.html
@@ -148,8 +148,13 @@
 					  <br><br>
 				   	<div class="row well well-md" id="reviewsSection">
 				   	</div>
-			           		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-			           		<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
+				   	<div class="row fbSection">
+				   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+			           		
+				   	</div>
+			        <div class="row fbSection">
+			        	<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
+			        </div>
 				   	<!-- <div class="row well well-md">
 				   		<div class="center">
 					   		<h3 class="">Book your cleaning service today!</h3>
