trying to move the Facebook content

--- a/index.html
+++ b/index.html
@@ -148,13 +148,7 @@
 					  <br><br>
 				   	<div class="row well well-md" id="reviewsSection">
 				   	</div>
-				   	<div class="row fbSection">
-				   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-			           		
-				   	</div>
-			        <div class="row fbSection">
-			        	<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
-			        </div>
+				   	
 				   	<!-- <div class="row well well-md">
 				   		<div class="center">
 					   		<h3 class="">Book your cleaning service today!</h3>
@@ -515,6 +509,10 @@
 		</div>
 	  </div>
       <footer class="">
+      		<div class="row fbSection">
+				   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+			        	<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
+			        </div>
        		<div class="col-xs-12 col-md-12 well well-md" style="margin-bottom:0px; padding-bottom:0px; background-color:#222222; color:white;">
        			<div class="row">
        				<div class="center col-xs-12 col-md-8">
@@ -567,7 +565,7 @@
        			<div class="row">
 	           		<div class="center">
 	           			<div class="row">
-	           				<div class="col-md-3">
+	           				<div class="center">
 			           		<a href="http://www.facebook.com/GandSHC" class="hvr-grow"><img src="images/fb-circle-45.png" style="padding-right:15px;"></a>
 			           		</div>
 			           		<!-- <a href="https://www.instagram.com/G_and_S_House_Cleaning/?hl=en" class="hvr-grow"><img src="images/insta-circle-45.png" style="padding-right:15px;"></a>
