--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
 		</div>
 	  </div>
       <footer class="">
-      		<div class="row fbSection">
+      		<hr>
+      		<div class="col-md-12 fbSection">
 				   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 			        	<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
 			        </div>
