--- a/index.html
+++ b/index.html
@@ -512,12 +512,12 @@
       		<hr>
       		<div style="display: block;text-align:center;margin: 0px auto;width: 84%;">
 	      		<div class="col-xs-12 col-sm-12 col-md-4 fbSection" style="margin-top:10px">
-					   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+					   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" style="width:100%"></iframe>
 				        	
 				        </div>
-				<div class="col-xs-12 col-sm-12 col-md-8" style="text-align:right">
+				 <div class="col-xs-12 col-sm-12 col-md-8" style="text-align:right">
 					<div class="fb-comments" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
-				</div>
+				</div> 
 			</div>
        		<div class="col-xs-12 col-md-12 well well-md" style="margin-bottom:0px; padding-bottom:0px; background-color:#222222; color:white;">
        			<div class="row">
