--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="description" content="G&S House Cleaning is a local, family owned, phoenix residential cleaning bussiness. We are affordable and offer a 100% gurentee! Schedule a call today!">
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="images/gs_logo2.1.png">
     <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
   </head>
   <body>
-  <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1217399388317631";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+ <script>
+ //(function(d, s, id) {
+//   var js, fjs = d.getElementsByTagName(s)[0];
+//   if (d.getElementById(id)) return;
+//   js = d.createElement(s); js.id = id;
+//   js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1217399388317631";
+//   fjs.parentNode.insertBefore(js, fjs);
+// }(document, 'script', 'facebook-jssdk'));</script>
   	<nav class="navbar navbar-inverse">
 	  	<div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
