--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
   <body>
  <script>
- //(function(d, s, id) {
-//   var js, fjs = d.getElementsByTagName(s)[0];
-//   if (d.getElementById(id)) return;
-//   js = d.createElement(s); js.id = id;
-//   js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1217399388317631";
-//   fjs.parentNode.insertBefore(js, fjs);
-// }(document, 'script', 'facebook-jssdk'));</script>
+ (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1217399388317631";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
   	<nav class="navbar navbar-inverse">
 	  	<div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
