--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" id="html">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="G&S House Cleaning is a local, family owned, phoenix residential cleaning bussiness. We are affordable and offer a 100% gurentee! Schedule a call today!">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
   </head>
-  <body>
+  <body id="body">
  <script>
  (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -511,12 +511,13 @@
       <footer class="">
       		<hr>
       		<div style="display: block;text-align:center;margin: 0px auto;width: 84%;">
-	      		<div class="col-xs-12 col-sm-12 col-md-12 fbSection" style="margin-top:10px">
+	      		<div class="col-xs-12 col-sm-12 col-md-4 fbSection" style="margin-top:10px">
 					   		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fgandshc%2F&width=45&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1217399388317631" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" style="width:100%"></iframe>
 				        	
 				        </div>
+				 <div class="col-xs-12 col-sm-12 col-md-8" style="text-align:right">
 					<div class="fb-comments" style="width:90%" data-href="http://www.gshousecleaning.com" data-numposts="5"></div>
-				
+				</div> 
 			</div>
        		<div class="col-xs-12 col-md-12 well well-md" style="margin-bottom:0px; padding-bottom:0px; background-color:#222222; color:white;">
        			<div class="row">
