--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="G&S House Cleaning is a local, family owned, phoenix residential cleaning bussiness. We are affordable and offer a 100% gurentee! Schedule a call today!">
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/index.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="images/gs_logo2.1.png">
     <link rel="stylesheet" href="css/hover-min.css">
@@ -62,7 +62,7 @@
 		    	<div id="scrollDownBtn" class="hvr-sink">
 							<span class="glyphicon glyphicon-chevron-down"></span>
 						</div>
-		    		
+		    	
 			    <div class="container">
 			    	<h3 class="center">Our Residential Cleaning Service</h3>
 			    		<div class="row">
@@ -571,9 +571,11 @@
        			<div class="row">
 	           		<div class="center">
 	           			<div class="row">
-	           				<div class="center">
-			           		<a href="http://www.facebook.com/GandSHC" class="hvr-grow"><img src="images/fb-circle-45.png" style="padding-right:15px;"></a>
+	           				<div id="fb-button-div" style="">
+			           			<a href="http://www.facebook.com/GandSHC" class="hvr-grow" style="float:left"><img id="fb-img" src="images/facebook-button.gif" style="padding-right:15px; float:left; height:45px; margin-top:-6px"></a>
+			           		<div id="yelp-biz-badge-plain--HB2JSfHAUVX6cVZAv5cqw" style="float:left"><a href="http://yelp.com/biz/g-and-s-house-cleaning-goodyear-2?utm_medium=badge_button&amp;utm_source=biz_review_badge" target="_blank">Check out G&amp;S House Cleaning on Yelp</a></div>    <script>(function(d, t) {var g = d.createElement(t);var s = d.getElementsByTagName(t)[0];g.id = "yelp-biz-badge-script-plain--HB2JSfHAUVX6cVZAv5cqw";g.src = "http://yelp.com/biz_badge_js/en_US/plain/-HB2JSfHAUVX6cVZAv5cqw.js";s.parentNode.insertBefore(g, s);}(document, 'script'));</script>
 			           		</div>
+
 			           		<!-- <a href="https://www.instagram.com/G_and_S_House_Cleaning/?hl=en" class="hvr-grow"><img src="images/insta-circle-45.png" style="padding-right:15px;"></a>
 			           		<a href="https://twitter.com/GSHouseCleaning" class="hvr-grow"><img src="images/twit-circle.png"></a> -->
 			           	</div>
