--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="G&S House Cleaning is a local, family owned, phoenix residential cleaning bussiness. We are affordable and offer a 100% gurentee! Schedule a call today!">
     <title>GS House Cleaning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="icon" type="image/png" href="images/gs_logo2.1.png">
     <link rel="stylesheet" href="css/hover-min.css">
